--- a/kittyhime.css
+++ b/kittyhime.css
@@ -50,7 +50,7 @@ h3 {
     padding-top: 0px;
 }
 ul {
-    color:#e0aebf;
+    color:#ecbbce;
     font-family: georgia;
     font-size: 15px;
     column-count: 1;
